examples/test/testpolicy11433.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11433
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key33: value18
      key22: value34
      key1: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value43
          key45: value30
          key20: value12
